ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "your domain-name"
      http:
        paths:
          - pathType: Prefix
            path: "/maven-web-app"
            backend:
              service:
                name: app-service
                port:
                  number: 8080
